Allow no auth proxying.
